Fix CSE import bug on launch task if optional absent